Closed
Bug 248267
Opened 21 years ago
Closed 21 years ago
newsgroup subscribe window: search result unsorted and unsortable
Categories
(SeaMonkey :: MailNews: Message Display, defect)
SeaMonkey
MailNews: Message Display
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: robind, Assigned: neil)
Details
Attachments
(1 file, 1 obsolete file)
|
4.44 KB,
patch
|
Bienvenu
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7) Gecko/20040621
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7) Gecko/20040621
When search for "kern" newsgroup on news.gmane.org, results are not sorted.
When click on "newsgroups name" column in order to sort filtered newsgroups, I
don't get any sorting.
I expect this behaviour to be the same with any news server.
Reproducible: Always
Steps to Reproduce:
1. create an account on news.gmane.org
2. open the "subscribe" window
3. enter "kern" in search field.
4. try to sort results.
Actual Results:
Nothing.
Expected Results:
Result of the search step should be sorted.
Comment 1•21 years ago
|
||
Confirming.
This was _supposed_ to be fixed in bug 87928, but was never implemented for the
search view ;-(
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Linux → All
Hardware: PC → All
Comment 2•21 years ago
|
||
Confirmed in Mozilla 1.7 on Windows XP.
Using the GigaNews UseNet service, searching for all items that contain
"mozilla". Most of the list is sorted, but clicking on the newsgroup name
column header does nothing to affect the sort order.
(This bug seems similar to Bug 87928, except that it's still broken.)
| Assignee | ||
Comment 3•21 years ago
|
||
Reversing the list is the best I could do.
Comment 4•21 years ago
|
||
Neil? Did you intend for review requests to be set?
| Assignee | ||
Comment 5•21 years ago
|
||
Comment on attachment 154769 [details] [diff] [review]
Reverse sort by name only
I just realized I forgot to diff the .h :-[ well, I hope you can guess what it
says ;-)
Attachment #154769 -
Flags: superreview?(bienvenu)
Attachment #154769 -
Flags: review?(bienvenu)
Comment 6•21 years ago
|
||
Comment on attachment 154769 [details] [diff] [review]
Reverse sort by name only
+ if (mSearchResultSortDescending)
+ element->SetAttribute(dir, NS_LITERAL_STRING("descending"));
+ else
+ element->SetAttribute(dir, NS_LITERAL_STRING("ascending"));
this could use the ? operator...
in nsNntpIncomingServer::SetTree()
are we worried about any of those getters returning a null pointer (and thus
crashing)?
Attachment #154769 -
Flags: superreview?(bienvenu)
Attachment #154769 -
Flags: superreview+
Attachment #154769 -
Flags: review?(bienvenu)
Attachment #154769 -
Flags: review+
| Assignee | ||
Comment 7•21 years ago
|
||
| Assignee | ||
Updated•21 years ago
|
Assignee: sspitzer → neil.parkwaycc.co.uk
Attachment #154769 -
Attachment is obsolete: true
Status: NEW → ASSIGNED
| Assignee | ||
Updated•21 years ago
|
Attachment #157101 -
Flags: review?(bienvenu)
Updated•21 years ago
|
Attachment #157101 -
Flags: review?(bienvenu) → review+
| Assignee | ||
Comment 8•21 years ago
|
||
Fix checked in, with a persisted sortDirection as agreed by bienvenu.
Resolving; I think sorting by subscription should be a separate rfe.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment 9•21 years ago
|
||
Verified FIXED using build 2004-08-31-08 on Windows XP (Seamonkey trunk).
Status: RESOLVED → VERIFIED
| Reporter | ||
Comment 10•21 years ago
|
||
BUG REPORTER says:
"Bug fixed on linux home build :
Mozilla 1.8a4
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8a4) Gecko/20040908"
Updated•20 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•