Make it possible to reverse the filtered newsgroup subscription list b=248267 r/sr=bienvenu